--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
@@ -296,7 +296,7 @@
                     </Border>
 
 
-                    <DockPanel>
+                    <!--<DockPanel>
                         <TextBlock x:Name="infoTextBlock" Text="1-10 of 100 pages." VerticalAlignment="Center"
                            DockPanel.Dock="Left"
                        FontSize="16" FontWeight="SemiBold" 
@@ -305,7 +305,7 @@
                             <TextBlock Text="Current Page"
                        FontSize="20" FontWeight="SemiBold" 
                        Margin="0 0 8 0"/>
-                            <!--SelectionChanged=""-->
+                            --><!--SelectionChanged=""--><!--
                             <ComboBox  
                       x:Name="currentPageComboBox" 
                       Width="50">
@@ -316,7 +316,7 @@
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
                         </WrapPanel>
-                    </DockPanel>
+                    </DockPanel>-->
 
 
                 </StackPanel>
