Finish Off Some Coding Debt
[v] OrderAddBook need a close or cancel button
[v] OrderCreate need command to cancel changes
[v] OrderDetails need command to cancel changes
[v] Add Page Division and Page Selector to  OrderManagementView
[x] ShowMessageBox for Delete
[v] After adding book order, update datagrid;
[x] Add Max date and Min Date into ManagementView

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderAddBookView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderAddBookView.xaml
@@ -109,11 +109,11 @@
                             Width="75"
                             Margin="10 0 10 0">
                             <Border.InputBindings>
-                                <MouseBinding MouseAction="LeftClick" Command="{Binding DeleteBookCommand}" />
+                                <MouseBinding MouseAction="LeftClick" Command="{Binding ReturnToViewCommand}" />
                             </Border.InputBindings>
                             <TextBlock
                                 Margin="16 5 16 5"
-                                Text="Delete"
+                                Text="Return"
                                 FontSize="12" FontWeight="Bold" Foreground="White"
                                 HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Border>
