--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderManagementView.xaml
@@ -385,7 +385,7 @@
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Right"
                                        Margin="0 0 16 0">
-                                <Run Text="Total Book:"/>
+                                <Run Text="Total Order:"/>
                                 <Run Text="{Binding TotalOrder}"/>
                             </TextBlock>
                         </Grid>
