Adding More Classes To Category
Category Debt
[v] Styling
[v] Add Category Details
[] Add Book to Category
[v] Add Create new Category View

[] API Call to Confirm change and Delete to Category
[] API Call to Add New Category

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
@@ -64,7 +64,12 @@
             <DataTemplate DataType="{x:Type viewModel:CategoryManagementViewModel}">
                 <view:CategoryManagementView/>
             </DataTemplate>
-                
+            <DataTemplate DataType="{x:Type viewModel:CategoryDetailViewModel}">
+                <view:CategoryDetailView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:CategoryCreateViewModel}">
+                <view:CategoryCreateView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
